add custom markers

--- a/src/data/offers/01-eyecam-co.mdx
+++ b/src/data/offers/01-eyecam-co.mdx
@@ -9,6 +9,9 @@ level: Midweight
 postedAt: 3w ago
 contract: Full Time
 location: Roma
+street: Via Nazionale
+street_number: 184
+coordinates: { lat: 41.898090, lng: 12.489020 }
 languages: [JavaScript, Python]
 tools: [Django]
 slug: eyecam-co
