--- a/src/data/offers/02-photosnap.mdx
+++ b/src/data/offers/02-photosnap.mdx
@@ -9,6 +9,9 @@ level: Senior
 postedAt: 1d ago
 contract: Full Time
 location: Warsaw
+street: Jana Pawła II
+street_number: 46
+coordinates: { lat: 52.243050, lng: 20.993160 }
 languages: [HTML, CSS, JavaScript]
 tools: []
 slug: photosnap
