--- a/src/data/offers/04-account.mdx
+++ b/src/data/offers/04-account.mdx
@@ -8,7 +8,10 @@ role: Frontend
 level: Junior
 postedAt: 2d ago
 contract: Part Time
-location: Oslo
+location: Remote
+street: null
+street_number: null
+coordinates: { lat: null, lng: null }
 languages: [JavaScript]
 tools: [React, Sass]
 slug: account
