--- a/src/data/offers/05-myhome.mdx
+++ b/src/data/offers/05-myhome.mdx
@@ -9,6 +9,9 @@ level: Junior
 postedAt: 5d ago
 contract: Contract
 location: Berlin
+street: Lindenstraße
+street_number: 10969
+coordinates: { lat: 52.50283, lng: 13.39513 }
 languages: [CSS, JavaScript]
 tools: []
 slug: myhome
