--- a/src/data/offers/06-loop-studios.mdx
+++ b/src/data/offers/06-loop-studios.mdx
@@ -9,6 +9,9 @@ level: Midweight
 postedAt: 1w ago
 contract: Full Time
 location: Paris
+street: Place de la Bastille
+street_number: 75011
+coordinates: { lat: 48.85343, lng: 2.36973 }
 languages: [JavaScript]
 tools: [Ruby, Sass]
 slug: loop-studios
