--- a/src/data/offers/07-faceit.mdx
+++ b/src/data/offers/07-faceit.mdx
@@ -9,6 +9,9 @@ level: Junior
 postedAt: 2w ago
 contract: Full Time
 location: Moscow
+street: Taganskaya Ulitsa
+street_number: 115172
+coordinates: { lat: 55.74007, lng: 37.65285 }
 languages: [Ruby]
 tools: [RoR]
 slug: faceit
