--- a/src/data/offers/08-shortly.mdx
+++ b/src/data/offers/08-shortly.mdx
@@ -8,7 +8,10 @@ role: Frontend
 level: Junior
 postedAt: 2w ago
 contract: Full Time
-location: London
+location: Madrid
+street: Calle de las Infantas
+street_number: 23
+coordinates: { lat: 40.42026, lng: -3.6979 }
 languages: [HTML, JavaScript]
 tools: [Sass]
 slug: shortly
