--- a/src/data/offers/10-the-air-filter-company.mdx
+++ b/src/data/offers/10-the-air-filter-company.mdx
@@ -9,6 +9,9 @@ level: Junior
 postedAt: 1mo ago
 contract: Part Time
 location: Warsaw
+street: Górczewska
+street_number: 124
+coordinates: { lat: 52.23915, lng: 20.94159 }
 languages: [JavaScript]
 tools: [React, Sass]
 slug: the-air-filter-company
