--- a/src/data/offers/03-manage.mdx
+++ b/src/data/offers/03-manage.mdx
@@ -8,7 +8,10 @@ role: Fullstack
 level: Midweight
 postedAt: 1d ago
 contract: Part Time
-location: Remote
+location: Oslo
+street: Brageveien
+street_number: 2
+coordinates: { lat: 59.93104, lng: 10.73424 }
 languages: [Python]
 tools: [React]
 slug: manage
