--- a/src/data/offers/09-insure.mdx
+++ b/src/data/offers/09-insure.mdx
@@ -9,6 +9,9 @@ level: Junior
 postedAt: 2w ago
 contract: Full Time
 location: Dublin
+street: Phibsborough Rd
+street_number: 199
+coordinates: { lat: 53.35851, lng: -6.27308 }
 languages: [JavaScript]
 tools: [Vue, Sass]
 slug: insure
