add sort function

--- a/src/data/offers/01-eyecam-co.mdx
+++ b/src/data/offers/01-eyecam-co.mdx
@@ -1,12 +1,12 @@
 ---
 company: Eyecam Co.
 image: ../../assets/images/logos/eyecam-co.svg
-new: false
+new: true
 featured: false
 position: Full Stack Engineer
 role: Fullstack
 level: Midweight
-postedAt: 3w ago
+postedAt: 1592662078000
 contract: Full Time
 location: Roma
 street: Via Nazionale
