--- a/src/data/offers/03-manage.mdx
+++ b/src/data/offers/03-manage.mdx
@@ -2,11 +2,11 @@
 company: Manage
 image: ../../assets/images/logos/manage.svg
 new: true
-featured: true
+featured: false
 position: Fullstack Developer
 role: Fullstack
 level: Midweight
-postedAt: 1d ago
+postedAt: 1592597278000
 contract: Part Time
 location: Oslo
 street: Brageveien
