--- a/src/data/offers/04-account.mdx
+++ b/src/data/offers/04-account.mdx
@@ -6,7 +6,7 @@ featured: false
 position: Junior Frontend Developer
 role: Frontend
 level: Junior
-postedAt: 2d ago
+postedAt: 1592510878000
 contract: Part Time
 location: Remote
 street: null
