--- a/src/data/offers/05-myhome.mdx
+++ b/src/data/offers/05-myhome.mdx
@@ -6,7 +6,7 @@ featured: false
 position: Junior Frontend Developer
 role: Frontend
 level: Junior
-postedAt: 5d ago
+postedAt: 1592424478000
 contract: Contract
 location: Berlin
 street: Lindenstraße
