--- a/src/data/offers/06-loop-studios.mdx
+++ b/src/data/offers/06-loop-studios.mdx
@@ -6,7 +6,7 @@ featured: false
 position: Software Engineer
 role: FullStack
 level: Midweight
-postedAt: 1w ago
+postedAt: 1592078878000
 contract: Full Time
 location: Paris
 street: Place de la Bastille
