--- a/src/data/offers/07-faceit.mdx
+++ b/src/data/offers/07-faceit.mdx
@@ -6,7 +6,7 @@ featured: false
 position: Junior Backend Developer
 role: Backend
 level: Junior
-postedAt: 2w ago
+postedAt: 1591474078000
 contract: Full Time
 location: Moscow
 street: Taganskaya Ulitsa
