--- a/src/data/offers/10-the-air-filter-company.mdx
+++ b/src/data/offers/10-the-air-filter-company.mdx
@@ -6,7 +6,7 @@ featured: false
 position: Front-end Dev
 role: Frontend
 level: Junior
-postedAt: 1mo ago
+postedAt: 1590005278000
 contract: Part Time
 location: Warsaw
 street: Górczewska
