--- a/src/data/offers/02-photosnap.mdx
+++ b/src/data/offers/02-photosnap.mdx
@@ -6,7 +6,7 @@ featured: true
 position: Senior Frontend Developer
 role: Frontend
 level: Senior
-postedAt: 1d ago
+postedAt: 1592597278000
 contract: Full Time
 location: Warsaw
 street: Jana Pawła II
