--- a/src/data/offers/08-shortly.mdx
+++ b/src/data/offers/08-shortly.mdx
@@ -6,7 +6,7 @@ featured: false
 position: Junior Developer
 role: Frontend
 level: Junior
-postedAt: 2w ago
+postedAt: 1591474078000
 contract: Full Time
 location: Madrid
 street: Calle de las Infantas
