--- a/src/data/offers/09-insure.mdx
+++ b/src/data/offers/09-insure.mdx
@@ -6,7 +6,7 @@ featured: false
 position: Junior Frontend Developer
 role: Frontend
 level: Junior
-postedAt: 2w ago
+postedAt: 1591474078000
 contract: Full Time
 location: Dublin
 street: Phibsborough Rd
