--- a/src/data/offers/06-loop-studios.mdx
+++ b/src/data/offers/06-loop-studios.mdx
@@ -1,11 +1,21 @@
 ---
 company: Loop Studios
+company_description: Loop Studios is all about its people, its products and its company culture. The vision of the company is to deliver a durable, reliable and high-performance energy-saving electrochromic product for buildings and to provide a healthier indoor environment for their occupants. Its award winning electronically tintable glass solution is second-to-none and recognized by Green Building, Inc. as one of the top ten green building products available on the market place.
+position_description: The Front End Web Developer will design, develop and implement responsive web designs and mobile apps that directly support customer experiences and digital experience initiatives.
 image: ../../assets/images/logos/loop-studios.svg
 new: false
 featured: false
 position: Software Engineer
+benefits:
+  [
+    Salary dependent on experience and skills,
+    Friendly work atmosphere,
+    Health Insurance,
+    Paid holidays,
+  ]
+salary: 3000-5000$
 role: FullStack
-level: Midweight
+level: Mid
 postedAt: 1592078878000
 contract: Full Time
 location: Paris
