--- a/src/data/offers/01-eyecam-co.mdx
+++ b/src/data/offers/01-eyecam-co.mdx
@@ -1,11 +1,22 @@
 ---
 company: Eyecam Co.
+company_description: Eyecam is all about its people, its products and its company culture. The vision of the company is to deliver a durable, reliable and high-performance energy-saving electrochromic product for buildings and to provide a healthier indoor environment for their occupants. Its award winning electronically tintable glass solution is second-to-none and recognized by Green Building, Inc. as one of the top ten green building products available on the market place.
+position_description: The Front End Web Developer will design, develop and implement responsive web designs and mobile apps that directly support customer experiences and digital experience initiatives.
 image: ../../assets/images/logos/eyecam-co.svg
 new: true
 featured: false
+benefits:
+  [
+    Salary dependent on experience and skills,
+    Equipment required to do the job,
+    Friendly work atmosphere,
+    Health Insurance,
+    Paid holidays,
+  ]
+salary: 4000-7000$
 position: Full Stack Engineer
 role: Fullstack
-level: Midweight
+level: Mid
 postedAt: 1592662078000
 contract: Full Time
 location: Roma
