--- a/src/data/offers/02-photosnap.mdx
+++ b/src/data/offers/02-photosnap.mdx
@@ -1,8 +1,18 @@
 ---
 company: Photosnap
+company_description: Photosnap is all about its people, its products and its company culture. The vision of the company is to deliver a durable, reliable and high-performance energy-saving electrochromic product for buildings and to provide a healthier indoor environment for their occupants. Its award winning electronically tintable glass solution is second-to-none and recognized by Green Building, Inc. as one of the top ten green building products available on the market place.
+position_description: The Front End Web Developer will design, develop and implement responsive web designs and mobile apps that directly support customer experiences and digital experience initiatives.
 image: ../../assets/images/logos/photosnap.svg
 new: true
 featured: true
+benefits:
+  [
+    Salary dependent on experience and skills,
+    Equipment required to do the job,
+    Health Insurance,
+    Paid holidays,
+  ]
+salary: 8000$
 position: Senior Frontend Developer
 role: Frontend
 level: Senior
