--- a/src/data/offers/04-account.mdx
+++ b/src/data/offers/04-account.mdx
@@ -1,8 +1,12 @@
 ---
 company: Account
+company_description: Account is all about its people, its products and its company culture. The vision of the company is to deliver a durable, reliable and high-performance energy-saving electrochromic product for buildings and to provide a healthier indoor environment for their occupants. Its award winning electronically tintable glass solution is second-to-none and recognized by Green Building, Inc. as one of the top ten green building products available on the market place.
+position_description: The Front End Web Developer will design, develop and implement responsive web designs and mobile apps that directly support customer experiences and digital experience initiatives.
 image: ../../assets/images/logos/account.svg
 new: true
 featured: false
+benefits: [Salary dependent on experience and skills, Paid holidays]
+salary: 5000$
 position: Junior Frontend Developer
 role: Frontend
 level: Junior
