--- a/src/data/offers/07-faceit.mdx
+++ b/src/data/offers/07-faceit.mdx
@@ -1,9 +1,19 @@
 ---
 company: FaceIt
+company_description: FaceIt is all about its people, its products and its company culture. The vision of the company is to deliver a durable, reliable and high-performance energy-saving electrochromic product for buildings and to provide a healthier indoor environment for their occupants. Its award winning electronically tintable glass solution is second-to-none and recognized by Green Building, Inc. as one of the top ten green building products available on the market place.
+position_description: The Front End Web Developer will design, develop and implement responsive web designs and mobile apps that directly support customer experiences and digital experience initiatives.
 image: ../../assets/images/logos/faceit.svg
 new: false
 featured: false
 position: Junior Backend Developer
+benefits:
+  [
+    Salary dependent on experience and skills,
+    Equipment required to do the job,
+    Friendly work atmosphere,
+    Health Insurance,
+  ]
+salary: 3000$
 role: Backend
 level: Junior
 postedAt: 1591474078000
