--- a/src/data/offers/09-insure.mdx
+++ b/src/data/offers/09-insure.mdx
@@ -1,10 +1,20 @@
 ---
 company: Insure
+company_description: Insure is all about its people, its products and its company culture. The vision of the company is to deliver a durable, reliable and high-performance energy-saving electrochromic product for buildings and to provide a healthier indoor environment for their occupants. Its award winning electronically tintable glass solution is second-to-none and recognized by Green Building, Inc. as one of the top ten green building products available on the market place.
+position_description: The Front End Web Developer will design, develop and implement responsive web designs and mobile apps that directly support customer experiences and digital experience initiatives.
 image: ../../assets/images/logos/insure.svg
 new: false
 featured: false
 position: Junior Frontend Developer
 role: Frontend
+benefits:
+  [
+    Salary dependent on experience and skills,
+    Equipment required to do the job,
+    Friendly work atmosphere,
+    Paid holidays,
+  ]
+salary: 6000$
 level: Junior
 postedAt: 1591474078000
 contract: Full Time
